welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
  for ( k <- 1 to 6 ){
          ^